@@ -102,6 +102,8 @@ public class ParseOutputFormat implements OutputFormat<Text, Parse> {
 
     this.scfilters = new ScoringFilters(job);
     final int interval = job.getInt("db.fetch.interval.default", 2592000);
+    final boolean ignoreInternalLinks = job.getBoolean(
+        "db.ignore.internal.links", false);
     final boolean ignoreExternalLinks = job.getBoolean(
         "db.ignore.external.links", false);
     final String ignoreExternalLinksMode = job.get(
@@ -189,7 +191,7 @@ public class ParseOutputFormat implements OutputFormat<Text, Parse> {
           crawlOut.append(key, parseMDCrawlDatum);
 
         // need to determine origin (once for all outlinks)
-        if (ignoreExternalLinks) {
+        if (ignoreExternalLinks || ignoreInternalLinks) {
           URL originURL = new URL(fromUrl.toString());
           // based on domain?
           if ("bydomain".equalsIgnoreCase(ignoreExternalLinksMode)) {
@@ -207,7 +209,7 @@ public class ParseOutputFormat implements OutputFormat<Text, Parse> {
           String newUrl = pstatus.getMessage();
           int refreshTime = Integer.valueOf(pstatus.getArgs()[1]);
           newUrl = filterNormalize(fromUrl, newUrl, origin,
-              ignoreExternalLinks, ignoreExternalLinksMode, filters, normalizers,
+              ignoreInternalLinks, ignoreExternalLinks, ignoreExternalLinksMode, filters, normalizers,
               URLNormalizers.SCOPE_FETCHER);
 
           if (newUrl != null) {
@@ -238,7 +240,7 @@ public class ParseOutputFormat implements OutputFormat<Text, Parse> {
           // Only normalize and filter if fetcher.parse = false
           if (!isParsing) {
             toUrl = ParseOutputFormat.filterNormalize(fromUrl, toUrl, origin,
-                ignoreExternalLinks, ignoreExternalLinksMode, filters, normalizers);
+                ignoreInternalLinks, ignoreExternalLinks, ignoreExternalLinksMode, filters, normalizers);
             if (toUrl == null) {
               continue;
             }
@@ -316,37 +318,52 @@ public class ParseOutputFormat implements OutputFormat<Text, Parse> {
   }
 
   public static String filterNormalize(String fromUrl, String toUrl,
-      String fromHost, boolean ignoreExternalLinks,
+      String fromHost, boolean ignoreInternalLinks, boolean ignoreExternalLinks,
       String ignoreExternalLinksMode, URLFilters filters,
       URLNormalizers normalizers) {
-    return filterNormalize(fromUrl, toUrl, fromHost, ignoreExternalLinks,
+    return filterNormalize(fromUrl, toUrl, fromHost, ignoreInternalLinks, ignoreExternalLinks,
         ignoreExternalLinksMode, filters, normalizers,
         URLNormalizers.SCOPE_OUTLINK);
   }
 
   public static String filterNormalize(String fromUrl, String toUrl,
-      String origin, boolean ignoreExternalLinks, String ignoreExternalLinksMode, URLFilters filters,
+      String origin, boolean ignoreInternalLinks, boolean ignoreExternalLinks, String ignoreExternalLinksMode, URLFilters filters,
       URLNormalizers normalizers, String urlNormalizerScope) {
     // ignore links to self (or anchors within the page)
     if (fromUrl.equals(toUrl)) {
       return null;
     }
-    if (ignoreExternalLinks) {
+    if (ignoreExternalLinks || ignoreInternalLinks) {
       URL targetURL = null;
       try {
         targetURL = new URL(toUrl);
       } catch (MalformedURLException e1) {
         return null; // skip it
       }
-      if ("bydomain".equalsIgnoreCase(ignoreExternalLinksMode)) {
-        String toDomain = URLUtil.getDomainName(targetURL).toLowerCase();
-        if (toDomain == null || !toDomain.equals(origin)) {
-          return null; // skip it
+      if (ignoreExternalLinks) {
+        if ("bydomain".equalsIgnoreCase(ignoreExternalLinksMode)) {
+          String toDomain = URLUtil.getDomainName(targetURL).toLowerCase();
+          if (toDomain == null || !toDomain.equals(origin)) {
+            return null; // skip it
+          }
+        } else {
+          String toHost = targetURL.getHost().toLowerCase();
+          if (toHost == null || !toHost.equals(origin)) {
+            return null; // skip it
+          }
         }
-      } else {
-        String toHost = targetURL.getHost().toLowerCase();
-        if (toHost == null || !toHost.equals(origin)) {
-          return null; // skip it
+      }
+      if (ignoreInternalLinks) {
+        if ("bydomain".equalsIgnoreCase(ignoreExternalLinksMode)) {
+          String toDomain = URLUtil.getDomainName(targetURL).toLowerCase();
+          if (toDomain == null || toDomain.equals(origin)) {
+            return null; // skip it
+          }
+        } else {
+          String toHost = targetURL.getHost().toLowerCase();
+          if (toHost == null || toHost.equals(origin)) {
+            return null; // skip it
+          }
         }
       }
     }
